@@ -11,17 +11,16 @@ public class PoisonCommand extends ICommand {
     @CommandDescription(description = "<html>Poisons the target for the specified amount of time</html>",
             argnames = {"entity", "duration", "amplifier"}, name = "Poison", parameters = {ParameterType.Entity, ParameterType.Number, ParameterType.Number})
     public PoisonCommand() {
-        ParameterType[] buffer = {ParameterType.Entity, ParameterType.Number, ParameterType.Number};
-        this.paramTypes = buffer;
+        this.paramTypes = new ParameterType[]{ParameterType.Entity, ParameterType.Number, ParameterType.Number};
     }
 
     @Override
     public boolean playCommand(final EffectArgs ca) {
         try {
-            if (ca.params.size() == 3 && ca.params.get(0) instanceof Entity[] && ca.params.get(1) instanceof Number && ca.params.get(2) instanceof Number) {
-                final Entity[] entities = (Entity[]) ca.params.getFirst();
-                int time = (int) ((Number) ca.params.get(1)).doubleValue();
-                int amplifier = (int) ((Number) ca.params.get(2)).doubleValue();
+            if (ca.getParams().size() == 3 && ca.getParams().get(0) instanceof Entity[] && ca.getParams().get(1) instanceof Number && ca.getParams().get(2) instanceof Number) {
+                final Entity[] entities = (Entity[]) ca.getParams().getFirst();
+                int time = (int) ((Number) ca.getParams().get(1)).doubleValue();
+                int amplifier = (int) ((Number) ca.getParams().get(2)).doubleValue();
                 for (Entity e : entities) {
                     if (!(e instanceof LivingEntity)) {
                         break;
